@@ -1,19 +1,17 @@
 package xyz.akiradev.deezitems.manager;
 
+import dev.rosewood.rosegarden.RosePlugin;
+import dev.rosewood.rosegarden.locale.Locale;
+import dev.rosewood.rosegarden.manager.AbstractLocaleManager;
 import xyz.akiradev.deezitems.locale.EnglishLocale;
-import xyz.akiradev.pluginutils.PluginUtils;
-import xyz.akiradev.pluginutils.locale.Locale;
-import xyz.akiradev.pluginutils.manager.AbstractLocaleManager;
-
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class LocaleManager extends AbstractLocaleManager {
 
     private List<String> translationLocales;
 
-    public LocaleManager(PluginUtils plugin) {
+    public LocaleManager(RosePlugin plugin) {
         super(plugin);
 
         this.translationLocales = new ArrayList<>();
@@ -21,7 +19,7 @@ public class LocaleManager extends AbstractLocaleManager {
 
     @Override
     public List<Locale> getLocales() {
-        return Arrays.asList(
+        return List.of(
                 new EnglishLocale()
         );
     }
